src/snapshots/kiyoctl__tui__tests__browse_view.snap
---
source: src/tui.rs
expression: draw(&mut ui())
---
"┌ kiyoctl ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│Razer Kiyo Pro  1532:0e05   profile: default                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ controls (magenta = write-only, remembered by kiyoctl) ──────────────────────────────────────────┐"
"│ > brightness             129  ████████████████················  0..255                           │"
"│   contrast               163  ████████████████████············  0..255                           │"
"│   white_balance_auto      on  off on                                                             │"
"│   white_balance         4430  ██████████████··················  2000..7500 (locked)              │"
"│   hdr                     on  off on                                                             │"
"│   hdr_mode                 ?  dark bright                                                        │"
"│   fov                   wide  wide medium narrow                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Profile 'default'. Press ? for keys.                                                              │"
"│↑↓ move · ←→ adjust · Enter set · p profile · s save · a apply · R reset · ? help · q quit        │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
