src/snapshots/kiyoctl__tui__tests__help_overlay_in_a_small_terminal.snap
---
source: src/tui.rs
expression: "draw_at(&mut ui, 80, 24)"
---
"┌ kiyoctl ─────────────────────────────────────────────────────────────────────┐"
"│Razer Kiyo Pro  1532:0e05   profile: default                                  │"
"└───────┌ help ───────────────────────────────────────────────────────┐────────┘"
"┌ contro│kiyoctl keys                                                 │────────┐"
"│ > brig│                                                             │5       │"
"│   cont│  ↑ ↓ / j k        move between controls                     │5       │"
"│   whit│  ← → / h l        step a number, cycle a choice             │        │"
"│   whit│  ⇧ + ← →          step by ten                               │.7500 (l│"
"│   hdr │  Enter            type an exact number                      │        │"
"│   hdr_│  d                this control's camera default             │        │"
"│   fov │  mouse            click a bar or option; drag to sweep      │        │"
"│       │                                                             │        │"
"│       │  s  save profile      a  apply profile                      │        │"
"│       │  R  reset defaults    r  re-read from camera                │        │"
"│       │  p  switch profile    q  quit                               │        │"
"│       │                                                             │        │"
"│       │  Changes reach the camera at once; press s to keep them.    │        │"
"│       │  Magenta controls are write-only — kiyoctl remembers those. │        │"
"│       │                                                             │        │"
"└───────│  press any key to close                                     │────────┘"
"┌───────└─────────────────────────────────────────────────────────────┘────────┐"
"│Profile 'default'. Press ? for keys.                                          │"
"│↑↓ move · ←→ adjust · p profile · s save · ? help · q quit                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
