src/snapshots/kiyoctl__tui__tests__picker_dialog_renders.snap
---
source: src/tui.rs
expression: draw(&mut ui)
---
"┌ kiyoctl ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│Razer Kiyo Pro  1532:0e05   profile: default                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ controls (magenta = write-only, remembered by kiyoctl) ──────────────────────────────────────────┐"
"│ > brightness             129  ████████████████················  0..255                           │"
"│   contrast               163  ████████████████████············  0..255                           │"
"│   white_balance_auto      on  off on                                                             │"
"│   white_balance         4430  █┌ profiles ──────────────────────┐000..7500 (locked)              │"
"│   hdr                     on  o│    default                     │                                │"
"│   hdr_mode                 ?  d│  > streaming                   │                                │"
"│   fov                   wide  w│    + new profile…              │                                │"
"│                                │                                │                                │"
"│                                │ Enter choose · Esc close       │                                │"
"│                                └────────────────────────────────┘                                │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Profile 'default'. Press ? for keys.                                                              │"
"│↑↓ move · ←→ adjust · Enter set · p profile · s save · a apply · R reset · ? help · q quit        │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
